# slides

./: .gitignore  README.md  mkslides.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: deploy.yml
slides/: 2025-02-13_geotribu_introduction_en.md  2025-03-13_qchat_talk_en.md  2025-06-11_qchat_qgisfr2025.md  2025-06-11_qchat_qgisfr2025_beige.md  2025-06-11_qchat_qgisfr2025_dark.md  2025-06-11_qgisfr2025_geotribu-x-QGIS.md  2025-12-25_geotribu_2025_qalendar_en.md
theme/: scsstocss.py
theme/slides/: geotribu.css  geotribu.css.map  geotribu.scss
